[package]
authors = ["Age Manning <Age@AgeManning.com>"]
edition = "2018"
name = "enr-cli"
version = "0.6.0"
description = "Simple utility to read Ethereum Node Records (ENR)"
readme = "./README.md"
keywords = ["ethereum", "enr", "record", "EIP778", "node"]
repository = "https://github.com/AgeManning/enr-cli"
categories = ["cryptography::cryptocurrencies"]
license = "MIT"
exclude = [
	".gitignore",
	".github/*"
]

[[bin]]
name = "enr-cli"
path = "src/main.rs"

[dependencies]
enr = { version = "0.12", features = ["ed25519"] }
clap = "4.0.18"
libp2p-core = "0.41"
hex = "0.4.3"
eth2_ssz = "0.4.0"
eth2_ssz_derive = "0.3.0"
bytes = "1"
# TODO: remove 'rand' feature when <https://github.com/libp2p/rust-libp2p/pull/5212> is merged
libp2p-identity = { version = "0.2.8", features = ['ecdsa', 'ed25519', 'peerid', 'secp256k1', 'rand'] }

[dev-dependencies]
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
